# equinox_vision

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
equinox_vision/: data.py  datasets.py  resnet.py  transforms.py
equinox_vision/models/: __init__.py  resnet.py  utils.py
examples/: README.md  cifar10.py
tests/: test_data.py  test_datasets.py  test_resnet.py  test_transforms.py
